refactor: errorResponse struct in handler
