# app/delivery/http/handler.go
@@ -26,12 +26,14 @@ func NewHandler(uc app.Usecase) *Handler {
 // @Produce      	json
 // @Param 				input body newClient true "Client name"
 // @Success 			200 {integer} integer "Client ID"
+// @Failure 			400 {object} errorResponse
+// @Failure 			500 {object} errorResponse
 // @Router 				/client [post]
 func (h *Handler) CreateClient(c *gin.Context) {
 	var client newClient
 
 	if err := c.BindJSON(&client); err != nil {
-		c.JSON(http.StatusBadRequest, map[string]interface{}{"status": "error", "error": err.Error()})
+		h.newErrorResponse(c, http.StatusBadRequest, err)
 		return
 	}
 
@@ -40,11 +42,11 @@ func (h *Handler) CreateClient(c *gin.Context) {
 
 	id, err := h.uc.CreateClient(ctx, h.toModelClient(client))
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, map[string]interface{}{"status": "error", "error": err.Error()})
+		h.newErrorResponse(c, http.StatusInternalServerError, err)
 		return
 	}
 
-	c.JSON(http.StatusOK, map[string]interface{}{"status": "success", "client_id": id})
+	c.JSON(http.StatusOK, map[string]interface{}{"client_id": id})
 }
 
 // GetClientByID 	godoc
@@ -54,11 +56,14 @@ func (h *Handler) CreateClient(c *gin.Context) {
 // @Produce      	json
 // @Param 				id path integer true "Client id"
 // @Success 			200 {object} outClient
+// @Success 			200 {array} integer
+// @Failure 			400 {object} errorResponse
+// @Failure 			500 {object} errorResponse
 // @Router 				/client/{id} [get]
 func (h *Handler) GetClientByID(c *gin.Context) {
 	id, err := strconv.ParseUint(c.Param("id"), 10, 64)
 	if err != nil || id == 0 {
-		c.JSON(http.StatusBadRequest, map[string]interface{}{"status": "error", "error": "Invalid value in param 'id'"})
+		h.newErrorResponse(c, http.StatusBadRequest, errInvalidID)
 		return
 	}
 
@@ -67,11 +72,11 @@ func (h *Handler) GetClientByID(c *gin.Context) {
 
 	mClient, idList, err := h.uc.GetClientByID(ctx, id)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, map[string]interface{}{"status": "error", "error": err.Error()})
+		h.newErrorResponse(c, http.StatusInternalServerError, err)
 		return
 	}
 
-	c.JSON(http.StatusOK, map[string]interface{}{"status": "success", "client": h.toOutClient(mClient), "accounts_id": idList})
+	c.JSON(http.StatusOK, map[string]interface{}{"client": h.toOutClient(mClient), "accounts_id": idList})
 }
 
 // CreateAccount godoc
@@ -81,12 +86,14 @@ func (h *Handler) GetClientByID(c *gin.Context) {
 // @Produce      	json
 // @Param 				input body newAccount true "Client id"
 // @Success 			200 {integer} integer "Account ID"
+// @Failure 			400 {object} errorResponse
+// @Failure 			500 {object} errorResponse
 // @Router 				/account [post]
 func (h *Handler) CreateAccount(c *gin.Context) {
 	var account newAccount
 
 	if err := c.BindJSON(&account); err != nil {
-		c.JSON(http.StatusBadRequest, map[string]interface{}{"status": "error", "error": err.Error()})
+		h.newErrorResponse(c, http.StatusBadRequest, err)
 		return
 	}
 
@@ -95,11 +102,11 @@ func (h *Handler) CreateAccount(c *gin.Context) {
 
 	id, err := h.uc.CreateAccount(ctx, account.CurrencyID, account.ClientID)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, map[string]interface{}{"status": "error", "error": err.Error()})
+		h.newErrorResponse(c, http.StatusInternalServerError, err)
 		return
 	}
 
-	c.JSON(http.StatusOK, map[string]interface{}{"status": "success", "account_id": id})
+	c.JSON(http.StatusOK, map[string]interface{}{"account_id": id})
 }
 
 // GetAccountByID godoc
@@ -109,11 +116,13 @@ func (h *Handler) CreateAccount(c *gin.Context) {
 // @Produce      	json
 // @Param 				id path integer true "Account id"
 // @Success 			200 {object} outAccount
+// @Failure 			400 {object} errorResponse
+// @Failure 			500 {object} errorResponse
 // @Router 				/account/{id} [get]
 func (h *Handler) GetAccountByID(c *gin.Context) {
 	id, err := strconv.ParseUint(c.Param("id"), 10, 64)
 	if err != nil || id == 0 {
-		c.JSON(http.StatusBadRequest, map[string]interface{}{"status": "error", "error": "Invalid value in param 'id'"})
+		h.newErrorResponse(c, http.StatusBadRequest, errInvalidID)
 		return
 	}
 
@@ -122,11 +131,11 @@ func (h *Handler) GetAccountByID(c *gin.Context) {
 
 	mAccount, err := h.uc.GetAccountByID(ctx, id)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, map[string]interface{}{"status": "error", "error": err.Error()})
+		h.newErrorResponse(c, http.StatusInternalServerError, err)
 		return
 	}
 
-	c.JSON(http.StatusOK, map[string]interface{}{"status": "success", "account": h.toOutAccount(mAccount)})
+	c.JSON(http.StatusOK, map[string]interface{}{"account": h.toOutAccount(mAccount)})
 }
 
 // CreateTransaction godoc
@@ -136,12 +145,14 @@ func (h *Handler) GetAccountByID(c *gin.Context) {
 // @Produce      	json
 // @Param 				input body newTransaction true "transaction type"
 // @Success 			200 {integer} integer "Transaction ID"
+// @Failure 			400 {object} errorResponse
+// @Failure 			500 {object} errorResponse
 // @Router 				/transaction [post]
 func (h *Handler) CreateTransaction(c *gin.Context) {
 	var transaction newTransaction
 
 	if err := c.BindJSON(&transaction); err != nil {
-		c.JSON(http.StatusBadRequest, map[string]interface{}{"status": "error", "error": err.Error()})
+		h.newErrorResponse(c, http.StatusBadRequest, err)
 		return
 	}
 
@@ -150,11 +161,11 @@ func (h *Handler) CreateTransaction(c *gin.Context) {
 
 	id, err := h.uc.CreateTransaction(ctx, h.toModelTransction(transaction))
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, map[string]interface{}{"status": "error", "error": err.Error()})
+		h.newErrorResponse(c, http.StatusInternalServerError, err)
 		return
 	}
 
-	c.JSON(http.StatusOK, map[string]interface{}{"status": "success", "transaction_id": id})
+	c.JSON(http.StatusOK, map[string]interface{}{"transaction_id": id})
 }
 
 // GetTransactionsListByAccountID godoc
@@ -164,11 +175,13 @@ func (h *Handler) CreateTransaction(c *gin.Context) {
 // @Produce      									json
 // @Param 												id path integer true "Account id"
 // @Success 											200 {array} outTransaction
+// @Failure 			400 {object} errorResponse
+// @Failure 			500 {object} errorResponse
 // @Router 												/transaction/{id} [get]
 func (h *Handler) GetTransactionsListByAccountID(c *gin.Context) {
 	id, err := strconv.ParseUint(c.Param("id"), 10, 64)
 	if err != nil || id == 0 {
-		c.JSON(http.StatusBadRequest, map[string]interface{}{"status": "error", "error": "Invalid value in param 'id'"})
+		h.newErrorResponse(c, http.StatusBadRequest, errInvalidID)
 		return
 	}
 
@@ -177,7 +190,7 @@ func (h *Handler) GetTransactionsListByAccountID(c *gin.Context) {
 
 	mTransactionsList, err := h.uc.GetTransactionsListByAccountID(ctx, id)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, map[string]interface{}{"status": "error", "error": err.Error()})
+		h.newErrorResponse(c, http.StatusInternalServerError, err)
 		return
 	}
 
@@ -186,5 +199,5 @@ func (h *Handler) GetTransactionsListByAccountID(c *gin.Context) {
 		outTransactionsList = append(outTransactionsList, h.toOutTransaction(mTransaction))
 	}
 
-	c.JSON(http.StatusOK, map[string]interface{}{"status": "success", "transactions": outTransactionsList})
+	c.JSON(http.StatusOK, map[string]interface{}{"transactions": outTransactionsList})
 }
