# docs/swagger.json
@@ -96,6 +96,18 @@
                         "schema": {
                             "type": "integer"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/app_delivery_http.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/app_delivery_http.errorResponse"
+                        }
                     }
                 }
             }
@@ -194,6 +206,14 @@
         }
     },
     "definitions": {
+        "app_delivery_http.errorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
         "app_delivery_http.newAccount": {
             "type": "object",
             "properties": {
@@ -285,6 +305,14 @@
                     "type": "integer"
                 },
                 "type": {
+                    "type": "string"
+                }
+            }
+        },
+        "github.com_DarkSoul94_money-processing-service_app_delivery_http.errorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
                     "type": "string"
                 }
             }
